--- a/todolist-frontend/package.json
+++ b/todolist-frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue-3": "^0.5.1",
     "date-fns": "^4.1.0",
     "pinia": "^3.0.2",
+    "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
