--- a/todolist-mybatis/src/main/resources/application.yml
+++ b/todolist-mybatis/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/todoappdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root # 替换
-    password: Zcy010604! # 替换
+    password: root # 替换
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
@@ -27,4 +27,4 @@ token:
 
 imgbb:
   api:
-    key: 190930b7ed8e061601394faa7519e051
+    key: key
