--- a/todolist-frontend/package.json
+++ b/todolist-frontend/package.json
@@ -12,8 +12,10 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "bootstrap-vue-3": "^0.5.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "pinia": "^3.0.2",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
